--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
 
       <h3 class="result-subheading">QR code</h3>
       <p class="hint small">
-        Generated from the current short URL. Updating the custom code will refresh both QR versions.
+        Generated from the current short URL. Updating the custom code will QR code.
       </p>
 
       <div class="qr-wrapper">
